--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 streamlit
 supabase
-docxtpl
-python-dateutil
-pandas
-# O Jinja2 já vem com o docxtpl, mas garantimos a versão
-Jinja2
 bcrypt
+docxtpl
+python-docx
 pypdf
 reportlab
-pytz
+httpx==0.27.2
+httpcore==1.0.5
